WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219017
REGRESSION (
r269824
): YouTube media control bar sometimes flickers
https://bugs.webkit.org/show_bug.cgi?id=219017
Summary
REGRESSION (r269824): YouTube media control bar sometimes flickers
Tim Horton
Reported
2020-11-16 19:10:16 PST
REGRESSION (
r269824
): YouTube media control bar sometimes flickers
Attachments
Patch
(5.48 KB, patch)
2020-11-16 19:10 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(5.41 KB, patch)
2020-11-16 19:36 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-11-16 19:10:45 PST
Created
attachment 414299
[details]
Patch
Tim Horton
Comment 2
2020-11-16 19:10:47 PST
<
rdar://problem/71454799
>
Simon Fraser (smfr)
Comment 3
2020-11-16 19:20:53 PST
Comment on
attachment 414299
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=414299&action=review
> LayoutTests/compositing/repaint/transparent-layer-repaint-expected.html:4 > + <style type="text/css" media="screen">
No need for `type="text/css" media="screen"`
> LayoutTests/compositing/repaint/transparent-layer-repaint-expected.html:9 > + -webkit-transform: translateZ(0);
no prefix!
> LayoutTests/compositing/repaint/transparent-layer-repaint.html:9 > + -webkit-transform: translateZ(0);
No prefix.
> LayoutTests/compositing/repaint/transparent-layer-repaint.html:25 > + await UIHelper.ensurePresentationUpdate();
Maybe UIHelper.renderingUpdate()?
> LayoutTests/compositing/repaint/transparent-layer-repaint.html:27 > + await UIHelper.ensurePresentationUpdate();
Same
Tim Horton
Comment 4
2020-11-16 19:29:10 PST
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 414299
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=414299&action=review
> > > LayoutTests/compositing/repaint/transparent-layer-repaint-expected.html:4 > > + <style type="text/css" media="screen"> > > No need for `type="text/css" media="screen"`
Erk, I removed them from the other one (obviously I started with a really antique test).
> > LayoutTests/compositing/repaint/transparent-layer-repaint-expected.html:9 > > + -webkit-transform: translateZ(0); > > no prefix!
TRUE
> > LayoutTests/compositing/repaint/transparent-layer-repaint.html:9 > > + -webkit-transform: translateZ(0); > > No prefix. > > > LayoutTests/compositing/repaint/transparent-layer-repaint.html:25 > > + await UIHelper.ensurePresentationUpdate(); > > Maybe UIHelper.renderingUpdate()?
Whazzat. I'll look!
> > LayoutTests/compositing/repaint/transparent-layer-repaint.html:27 > > + await UIHelper.ensurePresentationUpdate(); > > Same
Tim Horton
Comment 5
2020-11-16 19:36:38 PST
Created
attachment 414301
[details]
Patch
EWS
Comment 6
2020-11-17 00:28:53 PST
Committed
r269895
: <
https://trac.webkit.org/changeset/269895
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414301
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug